--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -151,6 +151,10 @@
         border-left: 5px solid #60C6D5;
     } */
 
+    :required{
+    border: 1px solid #444444;
+    }
+
     em{
         color:red;
     }
