--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -151,9 +151,13 @@
         border-left: 5px solid #60C6D5;
     } */
 
-    :required{
+    .black-border{
     border: 1px solid #444444;
     }
+
+    .red-border{
+        border: 1px solid red;
+        }
 
     em{
         color:red;
