--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -534,7 +534,7 @@
             </div>
         </div>
         <div class="col-12 text-center" style="padding-bottom: 25px;left:100px">
-            <button type="Submit" (click)="onSubmit()" class="btn btn-lg" [class.btn-success]="contractPhysicianForm.valid"
+            <button type="Submit" (click)="onSubmit()" class="btn btn-lg" [disabled]="contractPhysicianForm.invalid" [class.btn-success]="contractPhysicianForm.valid"
                 [ngClass]="{'btn-success' : contractPhysicianForm.valid}" style="border-radius: 50px;">
                 <span class="badge" style="border-radius: 100%;">
                     <span class="fa fa-1x glyphicon glyphicon-ok"></span>
