--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -261,7 +261,7 @@
                                                 
                                                 </select> -->
                                                 <div class="form-row form-group col-12 ">
-                                                        <select size="1" disabled class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
+                                                        <select size="1" (mouseover)="onSelect()" class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
                                                        
                                                               <!-- <option *ngFor="let txcode of txcodes" [value]="txcode.value">{{txcode.id}}</option> -->
                                                               <option *ngFor="let txcode of txcodes" [selected]="selectedTaxcode">{{selectedTaxcode}}</option>
@@ -270,16 +270,70 @@
                                                       </div>
                                                     
                                             </div>
+                                            <!-- <div class="form-group col-4">
+                                                    <label for="inputTxc">
+                                                            TAXONOMY CODE*
+                                                        </label>
+                                                        <div>
+                                                     <span class="form-control black-border" class="glyphicon glyphicon-search"  (click)="onSelect()">Search</span> 
+                                                    </div>
+                                                  </div> -->
+                                            <!-- <button class="dropdown-header" (click)="onSelect()">Link 2</button>  -->
+                                            <div class="pop" *ngIf="IsHidden">
+                                                <div class="pop-arrow"></div>
+                                                <div class="pop-title"> TAXONOMY CODE QUICK LOOKUP</div>
+                                                <div class="pop-container">
+                                                        
+                                                               
+                                                        <input  style="width: 250px;height: 40x;margin-left: 10px;" type="text"   class="form-control"  id="inputBtAffhos" placeholder="quick search" formControlName="description1" [(ngModel)]="name" (keyup)="searchClient(name)"/>
+
+                                                  <ul style="overflow-y: scroll; height:230px;" >
+                                                    <li>
+                                                        
+                                                            <!-- <h2>Please Select TAXANOMY</h2> -->
+                                                            <div>
+                                                           
+                                                            <table class="table table-bordered pop-title table-responsive" style="width:800px;">
+                                                              
+                                                              <tbody class="table table-hover">
+                                                                    <tr class="table table-light">
+                                                                            <td>Id</td>
+                                                                            <td>Code</td>
+                                                                            <td>Grouping</td>
+                                                                            <td>Classification</td>
+                                                                            <td>Specialization</td>
+                                                                          </tr>
+                                                                <tr  class="table table-striped" (click)="onselectClient(degree)" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;">
+                                                                 
+                                                                 <!-- <td colspan="5">  <h4> <a  (click)="onselectClient(degree)" #selectV [innerHTML]="i+1 +' ' +degree.id + '   '+ degree.name + '   '+ degree.Desc1 + '   '+ degree.Desc2 | pmahighlighttext : name"></a></h4> </td> -->
+                                                                  <td>{{i+1}}</td>
+                                                                  <td>{{degree.id}}</td>
+                                                                  <td [innerHTML]="degree.name | pmahighlighttext : name"></td>
+                                                                  <td [innerHTML]="degree.Desc1 | pmahighlighttext : name"></td>
+                                                                  <td [innerHTML]="degree.Desc2 | pmahighlighttext : name"></td> 
+                                                                </tr>
+                                                                 
+                                                              </tbody>
+                                                            </table>
+                                                        </div> 
+                                                         
+                                                    </li>
+                                                   
+                                                </ul>
+                                                </div>
+                                              </div>
+                                                  
+<!--                                            
                                             <div class="form-group col-4">
                                                     <label for="inputTxc">
                                                             FAST SEARCH TAXONOMY CODE*
                                                         </label>
                                             <div id="admin">
-                                                    <!-- <p>Select Code -->
+                                                   
                                                      <input  type="text"  class="form-control"  id="inputBtAffhos" placeholder="" formControlName="description1" [(ngModel)]="name" (keyup)="searchClient(name)"/>
-                                               <!-- </p> -->
+                                             
                                                </div>
-                                               </div>
+                                               </div> -->
 
                                              <!-- Testing area -->
                                             
@@ -289,8 +343,7 @@
                                             <!-- <div class="form-row col-12"  *ngIf="flag">
                                             <div class="search-result col-12">   -->
                                                 <!-- <div class="search-result form-row form-group col-8" *ngIf="flag">   -->
-                                                    <div class="form-group" *ngIf="flag" >
-                                                        <!-- <h2>Please Select TAXANOMY</h2> -->
+                                                    <!-- <div class="form-group" *ngIf="flag" >
                                                          <table   *ngIf="flag"  class="table table-bordered" style="width:800px;">
                                                           <thead>
                                                             <tr>
@@ -304,7 +357,6 @@
                                                           <tbody>
                                                             <tr  (click)="onselectClient(degree)" style="background-color: #ffffff"  *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;">
                                                              
-                                                             <!-- <td colspan="5">  <h4> <a  (click)="onselectClient(degree)" #selectV [innerHTML]="i+1 +' ' +degree.id + '   '+ degree.name + '   '+ degree.Desc1 + '   '+ degree.Desc2 | pmahighlighttext : name"></a></h4> </td> -->
                                                               <td>{{i+1}}</td>
                                                               <td>{{degree.id}}</td>
                                                               <td [innerHTML]="degree.name | pmahighlighttext : name"></td>
@@ -315,7 +367,7 @@
                                                              
                                                           </tbody>
                                                         </table>
-                                                      </div>
+                                                      </div> -->
                                                       
                                                 <!-- <ul>  
                                                     <li style="background-color:#BEDCF2; opacity:100%; font-style: normal; color: #444444;cursor: pointer;" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;" >  
