--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -1,8 +1,8 @@
-    img {
+ /*    img {
         image-rendering: auto;
         image-rendering: crisp-edges;
         image-rendering: pixelated;
-    }
+    } */
     .bg-color{
         background-color: #3B95D8;
     }
@@ -29,33 +29,36 @@
     .panel-body{
         background-color: rgba(59, 149, 216, 0.3);
         opacity: 30%;
+        padding-left:35px;
+        padding-top:30px;
+        padding-bottom:25px;
         }
 
     .sidenav {
         position: fixed;
         z-index: 1;
         left: 0;
-        width:185px;
+        width:250px;
         /* background-color: #3B95D8; */
         background-color: rgba(59, 149, 216, 0.3);
     }
     
     .sidenav h5 {
         font-size: 20px;
-        /* font-family: Lantinghei SC, Extralight; */
+        /* font-family: 'Times New Roman', Times, serif; */
         color: rgba(68, 68, 68, 1);
-        padding: 5px;
+        padding: 25px;
         font-weight: normal;        
     }
 
     .sidenav a {
-        font-size: 15px;
+        font-size: 20px;
         /* font-family: Lantinghei SC, Extralight; */
         color: rgba(68, 68, 68, 0.7);
     }
     
     .main {
-        margin-left: 250px; /* Same as the width of the sidenav */
+        margin-left: 375px; /* Same as the width of the sidenav */
         top: 0px;
     }
 
@@ -68,6 +71,7 @@
 
       table td{
           padding: 5px;
+          
       }
 
     .badge{
@@ -177,7 +181,7 @@
 
     label{
         color: rgba(68, 68, 68, 0.7);
-        font-size: 12px;
+        font-size: 10px;
         /* font-family: ArialMT, Regular; */
         font-weight: normal;
     }
