--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -261,7 +261,7 @@
                                                 
                                                 </select> -->
                                                 <div class="form-row form-group col-12 ">
-                                                        <select size="1" (mouseover)="onSelect()" class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
+                                                        <select size="1" (click)="onSelect()" class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
                                                        
                                                               <!-- <option *ngFor="let txcode of txcodes" [value]="txcode.value">{{txcode.id}}</option> -->
                                                               <option *ngFor="let txcode of txcodes" [selected]="selectedTaxcode">{{selectedTaxcode}}</option>
@@ -285,28 +285,31 @@
                                                 <div class="pop-container">
                                                         
                                                                
-                                                        <input  style="width: 250px;height: 40x;margin-left: 10px;" type="text"   class="form-control"  id="inputBtAffhos" placeholder="quick search" formControlName="description1" [(ngModel)]="name" (keyup)="searchClient(name)"/>
+                                                        <input  style="width: 250px;height: 50x;margin-left: 40px; border:1px; color:#444444;" type="text"   class="form-control"  id="inputBtAffhos" placeholder="quick search" formControlName="description1" [(ngModel)]="name" (keyup)="searchClient(name)"/>
 
-                                                  <ul style="overflow-y: scroll; height:230px;" >
-                                                    <li>
+                                                  <ul class="pop-container" style="overflow-y: scroll; height:230px; margin-left: 30px;" >
+                                                    <!-- <ul class="pop-container" style="height:230px; margin-left: 30px;" ></ul> -->
+                                                    <li class="pop-container table table-hover pop-title table-striped">
                                                         
                                                             <!-- <h2>Please Select TAXANOMY</h2> -->
+                                                             
                                                             <div>
                                                            
-                                                            <table class="table table-bordered pop-title table-responsive" style="width:800px;">
-                                                              
+                                                            <!-- <table class="table table-bordered pop-title table-striped" style="width:800px;"> -->
+                                                                <table class="table table-hover pop-title table-striped" style="width:800px;">
+                                                
                                                               <tbody class="table table-hover">
                                                                     <tr class="table table-light">
-                                                                            <td>Id</td>
-                                                                            <td>Code</td>
-                                                                            <td>Grouping</td>
-                                                                            <td>Classification</td>
-                                                                            <td>Specialization</td>
+                                                                           <!-- <td class="pop-container">Id</td> -->
+                                                                            <td class="pop-container">Code</td>
+                                                                            <td class="pop-container">Grouping</td>
+                                                                            <td class="pop-container">Classification</td>
+                                                                            <td class="pop-container">Specialization</td>
                                                                           </tr>
-                                                                <tr  class="table table-striped" (click)="onselectClient(degree)" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;">
+                                                                <tr class="table table-striped pop-container" (click)="onselectClient(degree)" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;">
                                                                  
                                                                  <!-- <td colspan="5">  <h4> <a  (click)="onselectClient(degree)" #selectV [innerHTML]="i+1 +' ' +degree.id + '   '+ degree.name + '   '+ degree.Desc1 + '   '+ degree.Desc2 | pmahighlighttext : name"></a></h4> </td> -->
-                                                                  <td>{{i+1}}</td>
+                                                                  <!-- <td>{{i+1}}</td>  -->
                                                                   <td>{{degree.id}}</td>
                                                                   <td [innerHTML]="degree.name | pmahighlighttext : name"></td>
                                                                   <td [innerHTML]="degree.Desc1 | pmahighlighttext : name"></td>
