--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -44,8 +44,9 @@
                     </td>
                     <td>
                         <span [class.badge]="contractPhysicianForm.controls.licensing.dirty" [ngClass]="{'valid' : contractPhysicianForm.controls.licensing.valid,
-                            'invalid' : (contractPhysicianForm.controls.licensing.dirty || contractPhysicianForm.controls.licensing.dirty) && contractPhysicianForm.controls.licensing.invalid}">
+                            'invalid' : (contractPhysicianForm.controls.licensing.dirty || contractPhysicianForm.controls.licensing.touched) && contractPhysicianForm.controls.licensing.invalid}">
                         </span>
+                        
                     </td>
                 </tr>
                 <tr [ngClass]="{'badge-custom' : locationPanelValueChange}">
@@ -261,7 +262,7 @@
                                                 
                                                 </select> -->
                                                 <div class="form-row form-group col-12 ">
-                                                        <select size="1" (click)="onSelect()" class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
+                                                        <select size="1" (click)="onSelect($event)" class="form-control black-border" formControlName="taxanomyCode" required >Dropdown
                                                        
                                                               <!-- <option *ngFor="let txcode of txcodes" [value]="txcode.value">{{txcode.id}}</option> -->
                                                               <option *ngFor="let txcode of txcodes" [selected]="selectedTaxcode">{{selectedTaxcode}}</option>
@@ -287,7 +288,7 @@
                                                                
                                                         <input  style="width: 250px;height: 50x;margin-left: 40px; border:1px; color:#444444;" type="text"   class="form-control"  id="inputBtAffhos" placeholder="quick search" formControlName="description1" [(ngModel)]="name" (keyup)="searchClient(name)"/>
 
-                                                  <ul class="pop-container" style="overflow-y: scroll; height:230px; margin-left: 30px;" >
+                                                  <ul class="pop-container" style="overflow-y: auto; height:230px; margin-left: 30px;" >
                                                     <!-- <ul class="pop-container" style="height:230px; margin-left: 30px;" ></ul> -->
                                                     <li class="pop-container table table-hover pop-title table-striped">
                                                         
@@ -297,7 +298,7 @@
                                                            
                                                             <!-- <table class="table table-bordered pop-title table-striped" style="width:800px;"> -->
                                                                 <table class="table table-hover pop-title table-striped" style="width:800px;">
-                                                
+                                                                
                                                               <tbody class="table table-hover">
                                                                     <tr class="table table-light">
                                                                            <!-- <td class="pop-container">Id</td> -->
@@ -306,14 +307,14 @@
                                                                             <td class="pop-container">Classification</td>
                                                                             <td class="pop-container">Specialization</td>
                                                                           </tr>
-                                                                <tr class="table table-striped pop-container" (click)="onselectClient(degree)" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ name: name, Desc1: name,Desc2:name } : false;let i=index;">
+                                                                <tr class="table table-striped pop-container" (click)="onselectClient(degree)" *ngFor="let degree of degreesdata | async | multicolumnfilter:{ id:name ,name: name, Desc1: name,Desc2:name } : false;let i=index;">
                                                                  
                                                                  <!-- <td colspan="5">  <h4> <a  (click)="onselectClient(degree)" #selectV [innerHTML]="i+1 +' ' +degree.id + '   '+ degree.name + '   '+ degree.Desc1 + '   '+ degree.Desc2 | pmahighlighttext : name"></a></h4> </td> -->
                                                                   <!-- <td>{{i+1}}</td>  -->
-                                                                  <td>{{degree.id}}</td>
-                                                                  <td [innerHTML]="degree.name | pmahighlighttext : name"></td>
-                                                                  <td [innerHTML]="degree.Desc1 | pmahighlighttext : name"></td>
-                                                                  <td [innerHTML]="degree.Desc2 | pmahighlighttext : name"></td> 
+                                                                  <td colspan="1" class="col-bg-color2">{{degree.id}}</td>
+                                                                  <td colspan="1" class="col-bg-color1" [innerHTML]="degree.name | pmahighlighttext : name"></td>
+                                                                  <td colspan="1" class="col-bg-color2" [innerHTML]="degree.Desc1 | pmahighlighttext : name"></td>
+                                                                  <td colspan="1" class="col-bg-color1"  [innerHTML]="degree.Desc2 | pmahighlighttext : name"></td> 
                                                                 </tr>
                                                                  
                                                               </tbody>
@@ -404,7 +405,7 @@
                                                 </label>
                                                 <!-- <textarea rows="4" class="form-control" disabled id="inputBtAffhos" placeholder="" formControlName="description" [(ngModel)]="name" (keyup)="searchClient(name)"></textarea> -->
                                                 <!-- <textarea rows="4" class="form-control"  id="inputBtAffhos" placeholder="" formControlName="description" [(ngModel)]="name" (keyup)="searchClient(name)"></textarea> -->
-                                                <textarea rows="4" class="form-control" disabled id="inputBtAffhos" placeholder="" formControlName="description" [value]="descriptionText" ></textarea>
+                                                <textarea rows="4" class="form-control" [attr.disabled]="true" id="inputBtAffhos" placeholder="" formControlName="description" [value]="descriptionText" ></textarea>
    
                                                 <!-- <input class="form-control" [(ngModel)]="name" disabled  *ngIf="flag" type="text" [ngModelOptions]="{standalone: true}" />   -->
 
